      to download files from Colabnet sites. (CNY-321)
    * The download code in cvc can now handle basic HTTP
      authentication. (CNY-981)
    * Shared libraries and symlinks to shared libraries provide their
      filenames as soname dependency provisions, as well as DT_SONAME
      records listed within the shared library, if any. (CNY-699)

  o Bugfixes:
    * Files added in both the repository and locally with cvc now give an
      error message on update rather than corrupting the CONARY file (CNY-1024)
    * Adding a file locally and then merging that file from upstream now
      causes an error as expected (it would traceback before). (CNY-1021)
    * Files added in both the repository and locally with cvc now give
      an error message on update rather than corrupting the CONARY
      file (CNY-1024)
    * Adding a file locally and then merging that file from upstream
      now causes an error as expected (it would traceback
      before). (CNY-1021)
    * Empty groups will not traceback if resolveDependencies is True --
      they will display an error message as expected. (CNY-1030)
    * Specifying a bad protocol in a repositoryMap entry (a protocol
      other than http or https) no longer causes an unhandled
      exception. (CNY-932)
    * When migrating, conary now utilizes update mode with all updates
      explicitly specified when re-execing after critical updates.
      Previously, the migration failed if a critical update was
      applied. (CNY-980)
    * Avoid infinite loops when including configuration files. (CNY-914)
    * Clean up after a critical update has been performed. (CNY-1012)
    * Do not allow for incomplete changesets to be checked in. (CNY-749)



Changes in 1.0.37:
  o Bugfixes:
    * A warning message produced when attempting to retrieve a OpenPGP
      key has been fixed.  The warning was introduced in CNY-589.

Changes in 1.0.36:
  o Client Changes:
    * The usage message displayed when running "conary" or "cvc" has